--- a/client/static/index.html
+++ b/client/static/index.html
@@ -1,41 +1,26 @@
 <!DOCTYPE html>
-<html ng-app='1955app'>
+<html ng-app='futgame'>
   <head>
     <meta charset="utf-8">
-    <title>1955 API</title>
+    <title>fut game</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.min.js"></script>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script>
       // Let's create our angular module
-      var names_app = angular.module('1955app', []);
+      var futgame_app = angular.module('futgame', ['ngRoute']);
     </script>
     <!-- Load controllers  -->
     <script type="text/javascript" src="js/controllers.js"></script>
     <script type="text/javascript" src="js/factories.js"></script>
+    <script type="text/javascript" src="js/routes.js"></script>
   </head>
   <body>
-    <h1>1955 Dashboard</h1>
-    <hr>
-    <p>
-      Add people who were born in 1955!
-    </p>
-    <div ng-controller='namesController'>
-      <form ng-submit='addPerson()'>
-        <input type="text" name="name" value="" ng-model='newPerson.name'>
-        <input type="submit" value="Submit">
-      </form>
-      </p>
-      <br>
-      <table>
-        <tr>
-          <th>Name</th>
-          <th>Action</th>
-        </tr>
-        <tr ng-repeat='person in personList'>
-          <td>{{person.name}}</td>
-          <td><button type="button" ng-click='removePerson(person)'>Delete</button></td>
-        </tr>
-      </table>
+    <div ng-view=''>
+
     </div>
   </body>
 </html>
