updated login form with jquery show hide and added angular directives to login partial

--- a/client/static/index.html
+++ b/client/static/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
     <script>
       // Let's create our angular module
       var futgame_app = angular.module('futgame', ['ngRoute']);
@@ -17,6 +19,7 @@
     <script type="text/javascript" src="js/controllers.js"></script>
     <script type="text/javascript" src="js/factories.js"></script>
     <script type="text/javascript" src="js/routes.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
   </head>
   <body>
     <div ng-view=''>
