added placeholder dashboard page

--- a/client/static/index.html
+++ b/client/static/index.html
@@ -5,6 +5,7 @@
     <title>fut game</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-cookies.min.js"></script>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -13,7 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
     <script>
       // Let's create our angular module
-      var futgame_app = angular.module('futgame', ['ngRoute']);
+      var futgame_app = angular.module('futgame', ['ngRoute', 'ngCookies']);
     </script>
     <!-- Load controllers  -->
     <script type="text/javascript" src="js/controllers.js"></script>
